--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&family=Roboto:wght@100;400;500;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+
 @font-face {
   font-family: 'Sharp Grotesk';
   src: url('SharpGrotesk.woff2'), url('SharpGrotesk.woff2') format('truetype'), url('SharpGrotesk.woff2') format('svg');
@@ -31,7 +33,8 @@ body {
   flex-direction: row;
 }
 
-.navbar .left-box {
+.navbar .left-box,
+.navbar .right-box {
   display: flex;
   flex-direction: row;
 }
@@ -55,18 +58,21 @@ body {
   align-items: center;
   padding: 0 10px;
 }
+
 .navbar .nav-button {
   border: none;
   background-color: white;
   padding: 0 15px;
 }
+
 .navbar .nav-button a {
-  font-family: Roboto;
+  font-family: Ubuntu;
   text-decoration: none;
-  color: black;
+  color: #232323;
   font-size: 17px;
   font-weight: 400;
 }
+
 .navbar .nav-button:hover {
   background-color: #ebebeb;
 }
